editor/tree-sitter-kofun/test/corpus/lambdas.txt
==================
An arrow body extends to the end of the expression
==================

let double = x => x * 2
let mapped = xs |> map(x => x + 1)

---

(source_file
  (let_statement
    (identifier)
    (lambda_expression
      (identifier)
      (pipeline_expression
        (coalesce_expression
          (logical_or_expression
            (logical_and_expression
              (equality_expression
                (comparison_expression
                  (range_expression
                    (additive_expression
                      (multiplicative_expression
                        (power_expression
                          (unary_expression
                            (postfix_expression
                              (identifier))))
                        (power_expression
                          (unary_expression
                            (postfix_expression
                              (integer)))))))))))))))
  (let_statement
    (identifier)
    (pipeline_expression
      (coalesce_expression
        (logical_or_expression
          (logical_and_expression
            (equality_expression
              (comparison_expression
                (range_expression
                  (additive_expression
                    (multiplicative_expression
                      (power_expression
                        (unary_expression
                          (postfix_expression
                            (identifier))))))))))))
      (coalesce_expression
        (logical_or_expression
          (logical_and_expression
            (equality_expression
              (comparison_expression
                (range_expression
                  (additive_expression
                    (multiplicative_expression
                      (power_expression
                        (unary_expression
                          (postfix_expression
                            (identifier)
                            (call_expression
                              (arguments
                                (lambda_expression
                                  (identifier)
                                  (pipeline_expression
                                    (coalesce_expression
                                      (logical_or_expression
                                        (logical_and_expression
                                          (equality_expression
                                            (comparison_expression
                                              (range_expression
                                                (additive_expression
                                                  (multiplicative_expression
                                                    (power_expression
                                                      (unary_expression
                                                        (postfix_expression
                                                          (identifier)))))
                                                  (multiplicative_expression
                                                    (power_expression
                                                      (unary_expression
                                                        (postfix_expression
                                                          (integer))))))))))))))))))))))))))))))

==================
Bare arrow lambda
==================

let double = x => x * 2

---

(source_file
  (let_statement
    (identifier)
    (lambda_expression
      (identifier)
      (pipeline_expression
        (coalesce_expression
          (logical_or_expression
            (logical_and_expression
              (equality_expression
                (comparison_expression
                  (range_expression
                    (additive_expression
                      (multiplicative_expression
                        (power_expression
                          (unary_expression
                            (postfix_expression
                              (identifier))))
                        (power_expression
                          (unary_expression
                            (postfix_expression
                              (integer))))))))))))))))

==================
Bare arrow lambda in a pipeline
==================

let doubled = xs |> map(x => x * 2)

---

(source_file
  (let_statement
    (identifier)
    (pipeline_expression
      (coalesce_expression
        (logical_or_expression
          (logical_and_expression
            (equality_expression
              (comparison_expression
                (range_expression
                  (additive_expression
                    (multiplicative_expression
                      (power_expression
                        (unary_expression
                          (postfix_expression
                            (identifier))))))))))))
      (coalesce_expression
        (logical_or_expression
          (logical_and_expression
            (equality_expression
              (comparison_expression
                (range_expression
                  (additive_expression
                    (multiplicative_expression
                      (power_expression
                        (unary_expression
                          (postfix_expression
                            (identifier)
                            (call_expression
                              (arguments
                                (lambda_expression
                                  (identifier)
                                  (pipeline_expression
                                    (coalesce_expression
                                      (logical_or_expression
                                        (logical_and_expression
                                          (equality_expression
                                            (comparison_expression
                                              (range_expression
                                                (additive_expression
                                                  (multiplicative_expression
                                                    (power_expression
                                                      (unary_expression
                                                        (postfix_expression
                                                          (identifier))))
                                                    (power_expression
                                                      (unary_expression
                                                        (postfix_expression
                                                          (integer))))))))))))))))))))))))))))))

==================
Parenthesised arrow lambda
==================

let add = (x, y) => x + y

---

(source_file
  (let_statement
    (identifier)
    (lambda_expression
      (parameters
        (parameter
          (identifier))
        (parameter
          (identifier)))
      (pipeline_expression
        (coalesce_expression
          (logical_or_expression
            (logical_and_expression
              (equality_expression
                (comparison_expression
                  (range_expression
                    (additive_expression
                      (multiplicative_expression
                        (power_expression
                          (unary_expression
                            (postfix_expression
                              (identifier)))))
                      (multiplicative_expression
                        (power_expression
                          (unary_expression
                            (postfix_expression
                              (identifier))))))))))))))))

==================
Parenthesised arrow lambda with no parameter or one parameter
==================

let zero = () => 0
let one = (x) => x

---

(source_file
  (let_statement
    (identifier)
    (lambda_expression
      (parameters)
      (pipeline_expression
        (coalesce_expression
          (logical_or_expression
            (logical_and_expression
              (equality_expression
                (comparison_expression
                  (range_expression
                    (additive_expression
                      (multiplicative_expression
                        (power_expression
                          (unary_expression
                            (postfix_expression
                              (integer)))))))))))))))
  (let_statement
    (identifier)
    (lambda_expression
      (parameters
        (parameter
          (identifier)))
      (pipeline_expression
        (coalesce_expression
          (logical_or_expression
            (logical_and_expression
              (equality_expression
                (comparison_expression
                  (range_expression
                    (additive_expression
                      (multiplicative_expression
                        (power_expression
                          (unary_expression
                            (postfix_expression
                              (identifier))))))))))))))))

==================
Annotating a parameter requires parentheses
==================

let typed = (x: Int) => x * 2

---

(source_file
  (let_statement
    (identifier)
    (lambda_expression
      (parameters
        (parameter
          (identifier)
          (type
            (identifier))))
      (pipeline_expression
        (coalesce_expression
          (logical_or_expression
            (logical_and_expression
              (equality_expression
                (comparison_expression
                  (range_expression
                    (additive_expression
                      (multiplicative_expression
                        (power_expression
                          (unary_expression
                            (postfix_expression
                              (identifier))))
                        (power_expression
                          (unary_expression
                            (postfix_expression
                              (integer))))))))))))))))

==================
Braced arrow body
==================

let braced = x => { return x }

---

(source_file
  (let_statement
    (identifier)
    (lambda_expression
      (identifier)
      (block
        (declaration_in_block
          (return_statement
            (pipeline_expression
              (coalesce_expression
                (logical_or_expression
                  (logical_and_expression
                    (equality_expression
                      (comparison_expression
                        (range_expression
                          (additive_expression
                            (multiplicative_expression
                              (power_expression
                                (unary_expression
                                  (postfix_expression
                                    (identifier)))))))))))))))))))

==================
Parentheses stay a tuple or a grouping without an arrow
==================

let pair = (a, b)
let group = (a)

---

(source_file
  (let_statement
    (identifier)
    (pipeline_expression
      (coalesce_expression
        (logical_or_expression
          (logical_and_expression
            (equality_expression
              (comparison_expression
                (range_expression
                  (additive_expression
                    (multiplicative_expression
                      (power_expression
                        (unary_expression
                          (postfix_expression
                            (tuple_expression
                              (pipeline_expression
                                (coalesce_expression
                                  (logical_or_expression
                                    (logical_and_expression
                                      (equality_expression
                                        (comparison_expression
                                          (range_expression
                                            (additive_expression
                                              (multiplicative_expression
                                                (power_expression
                                                  (unary_expression
                                                    (postfix_expression
                                                      (identifier)))))))))))))
                              (pipeline_expression
                                (coalesce_expression
                                  (logical_or_expression
                                    (logical_and_expression
                                      (equality_expression
                                        (comparison_expression
                                          (range_expression
                                            (additive_expression
                                              (multiplicative_expression
                                                (power_expression
                                                  (unary_expression
                                                    (postfix_expression
                                                      (identifier)))))))))))))))))))))))))))
  (let_statement
    (identifier)
    (pipeline_expression
      (coalesce_expression
        (logical_or_expression
          (logical_and_expression
            (equality_expression
              (comparison_expression
                (range_expression
                  (additive_expression
                    (multiplicative_expression
                      (power_expression
                        (unary_expression
                          (postfix_expression
                            (parenthesized_expression
                              (pipeline_expression
                                (coalesce_expression
                                  (logical_or_expression
                                    (logical_and_expression
                                      (equality_expression
                                        (comparison_expression
                                          (range_expression
                                            (additive_expression
                                              (multiplicative_expression
                                                (power_expression
                                                  (unary_expression
                                                    (postfix_expression
                                                      (identifier))))))))))))))))))))))))))))

==================
An annotation without parentheses is not a lambda
:error
==================

let bad = x: Int => x

---



==================
Match expressions are not part of this grammar; make this positive when they are
:error
==================

let rank = match level {
  Trace => 0,
  Debug => 1,
}

---

This case does NOT say match arms are forbidden. It records that this grammar
has no match rule at all today, matching spec/grammar.ebnf, so `match` cannot
parse yet. It is here so that adding match makes this case fail loudly and get
converted into a positive assertion that arms parse as arms.

Match arms and the bare `x => body` lambda do not collide. Measured against a
throwaway grammar carrying a match rule: it generated with no new conflicts;
`Trace => 0`, `Floor => lower`, an `if`-expression arm body and a nested
`Some => x => x + 1` all parsed with zero errors; and the arm trees were
identical with and without the bare lambda. An arm begins in pattern position
and a lambda is only reachable from expression position, so the two never
compete.

==================
Callable types use one arrow in both positions
==================

fn apply(action: Int -> Int, value: Int) -> Int = action(value)
fn combine(op: (Int, Int) -> Int) -> Int = op(1, 2)
fn run(thunk: () -> Int) -> Int = thunk()
fn nest(f: Int -> Int -> Int) -> Int = 0
fn maybe(f: (Int -> Int)?) -> Int = 0

---

(source_file
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type
          (identifier)
          (type
            (identifier))))
      (parameter
        (identifier)
        (type
          (identifier))))
    (type
      (identifier))
    (pipeline_expression
      (coalesce_expression
        (logical_or_expression
          (logical_and_expression
            (equality_expression
              (comparison_expression
                (range_expression
                  (additive_expression
                    (multiplicative_expression
                      (power_expression
                        (unary_expression
                          (postfix_expression
                            (identifier)
                            (call_expression
                              (arguments
                                (pipeline_expression
                                  (coalesce_expression
                                    (logical_or_expression
                                      (logical_and_expression
                                        (equality_expression
                                          (comparison_expression
                                            (range_expression
                                              (additive_expression
                                                (multiplicative_expression
                                                  (power_expression
                                                    (unary_expression
                                                      (postfix_expression
                                                        (identifier))))))))))))))))))))))))))))
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type
          (callable_domain
            (type
              (identifier))
            (type
              (identifier)))
          (type
            (identifier)))))
    (type
      (identifier))
    (pipeline_expression
      (coalesce_expression
        (logical_or_expression
          (logical_and_expression
            (equality_expression
              (comparison_expression
                (range_expression
                  (additive_expression
                    (multiplicative_expression
                      (power_expression
                        (unary_expression
                          (postfix_expression
                            (identifier)
                            (call_expression
                              (arguments
                                (pipeline_expression
                                  (coalesce_expression
                                    (logical_or_expression
                                      (logical_and_expression
                                        (equality_expression
                                          (comparison_expression
                                            (range_expression
                                              (additive_expression
                                                (multiplicative_expression
                                                  (power_expression
                                                    (unary_expression
                                                      (postfix_expression
                                                        (integer)))))))))))))
                                (pipeline_expression
                                  (coalesce_expression
                                    (logical_or_expression
                                      (logical_and_expression
                                        (equality_expression
                                          (comparison_expression
                                            (range_expression
                                              (additive_expression
                                                (multiplicative_expression
                                                  (power_expression
                                                    (unary_expression
                                                      (postfix_expression
                                                        (integer))))))))))))))))))))))))))))
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type
          (callable_domain)
          (type
            (identifier)))))
    (type
      (identifier))
    (pipeline_expression
      (coalesce_expression
        (logical_or_expression
          (logical_and_expression
            (equality_expression
              (comparison_expression
                (range_expression
                  (additive_expression
                    (multiplicative_expression
                      (power_expression
                        (unary_expression
                          (postfix_expression
                            (identifier)
                            (call_expression
                              (arguments)))))))))))))))
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type
          (identifier)
          (type
            (identifier)
            (type
              (identifier))))))
    (type
      (identifier))
    (pipeline_expression
      (coalesce_expression
        (logical_or_expression
          (logical_and_expression
            (equality_expression
              (comparison_expression
                (range_expression
                  (additive_expression
                    (multiplicative_expression
                      (power_expression
                        (unary_expression
                          (postfix_expression
                            (integer))))))))))))))
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type
          (callable_domain
            (type
              (identifier)
              (type
                (identifier)))))))
    (type
      (identifier))
    (pipeline_expression
      (coalesce_expression
        (logical_or_expression
          (logical_and_expression
            (equality_expression
              (comparison_expression
                (range_expression
                  (additive_expression
                    (multiplicative_expression
                      (power_expression
                        (unary_expression
                          (postfix_expression
                            (integer)))))))))))))))
