editor/tree-sitter-kofun/test/corpus/recovery.txt
================================
Truncated declaration
:error
================================

fn greet(name: Text) -> Text {
  return "hello"

---

================================
Truncated expression
:error
================================

fn main() {
  let answer = 40 +
}

---

==================================================
Broken delimiter preserves the following statement
:error
==================================================

fn main() {
  print([1, 2)
  print("still visible")
}

---

==================
Bare return ends at the significant newline
==================

fn main() {
  return
  42
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (declaration_in_block
        (return_statement))
      (declaration_in_block
        (expression_statement
          (pipeline_expression
            (coalesce_expression
              (logical_or_expression
                (logical_and_expression
                  (equality_expression
                    (comparison_expression
                      (range_expression
                        (additive_expression
                          (multiplicative_expression
                            (power_expression
                              (unary_expression
                                (postfix_expression
                                  (integer))))))))))))))))))
